# Tomatillo

./: .gitignore  README.md  generate_translations.sh  meson.build  update_translations.sh
.github/workflows/: build-flatpak.yml
build-aux/: io.github.diegopvlk.Tomatillo.json
data/: meson.build  tomatillo.desktop.in  tomatillo.gschema.xml  tomatillo.metainfo.xml.in  tomatillo.service.in
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  en_GB.po  es.po  io.github.diegopvlk.Tomatillo.pot  it.po  it_IT.po  meson.build  pt.po  pt_BR.po  ro.po  ru.po  tr.po  uk.po
src/: cycle-preset-deletion.blp  cycle-preset.blp  cycle-presets-list.blp  cycle_preset.blp  cycle_preset_deletion.blp  cycle_preset_selection.blp  cycle_preset_selection.py  cycle_presets_list.blp  main.py  meson.build  preferences.blp  preferences.py  presets.py  style.css  tomatillo.gresource.xml  tomatillo.in  window.blp  window.py
